--- a/config/database.yml
+++ b/config/database.yml
@@ -16,10 +16,13 @@
 #
 default: &default
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: localhost
+  username: vagrant
+  password: 123456
 
 development:
   <<: *default
